--- a/Merge Overlapping Intervals/Merge Overlapping Intervals.cbp
+++ b/Merge Overlapping Intervals/Merge Overlapping Intervals.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Merge Overlapping Intervals" />
+		<Option title="Merge overlapping intervals" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Merge Overlapping Intervals" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Merge overlapping intervals" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Merge Overlapping Intervals" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Merge overlapping intervals" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
